1.4.4
New:
-added back support for x86 devices
-added back Emerald Huts
Fixed:
-crash when opening the app
-Emerald Slab

1.4.3
New:
-added Emerald Bow(is not ready)
-support for 0.14.2
Changed/Improved:
-Emerald Pickaxe and Shovel code
-Flint and Emerald now works like Flint and Steel
-Changed Emerald Slab Id
-removed Emerald Huts(will be added back in future updates)
Fixed:
-emerald blocks were not added to creative inventory

1.4.2
Improved:
-a lot Emerald Huts
-updated Korean translations
Changed:
-lowered all items durability to 1800
Fixed:
-emerald blocks recipes
-rate button

1.4.1
New:
-added Korean translations
Improved:
-the Flint and Emerald now works like a Flint and Steel when dispensed
Fixed:
-hide app button

1.4
New:
-Emerald Rod and Emerald Dust have now an use
-added Emerald Double Slab(has no use)
-added Emerald Beef
-added German and Portughese(Brazilia) translations for the mod
Changed/Improved:
-changed main screen
-updated for Minecraft 0.14.1
-completly changed Super Emerald Sword
-changed Emerald Brick and Plank recipe
-better x86 support
-Emerald Armor has now a longer durability(2000)
Fixed:
-crash when opening inventory
-crash when opening crafting table
-Emerald Hut generation in most cases
Removed:
-the Emerald Pearl because it was crashing
-Credit Book
-Emerald Apple's fire resistence effect
Bugs:
-blocks aren't added to creative
-there is no recipe for blocks

1.3.3
New:
-added support for Intel x86 devices
-emerald houses generate with a door now
-added an experimental Emerald Pearl
Changed:
-renamed Emerald Big Sword to Super Emerald Sword
-renamed Emerald Pick And Axe to Emerald Pax
-changed Emerald Apple Id
-tools aren't so fast
-the Emerald Sword and Emerald Super Sword do a bit less damage
-removed the donate button
Fixed:
-added recipes for all blocks and items

1.3.1
New:
-added Emerald Mod Version to main screen
-changed the pocket edition main screen to windows 10
-added semi support for x86 devices