@@ -5,7 +5,7 @@
 EmeraldPlanksBlock::EmeraldPlanksBlock(int blockId) : Block("emeraldPlanks", blockId, "emerald_planks", Material::getMaterial(MaterialType::WOOD))
 {
 	setDestroyTime(1.5F);
-	setExplodeable(8.0F);
+	setExplodeable(5.0F);
 	setMapColor(Color::GREEN);
 	creativeCategory = CreativeItemCategory::BLOCKS;
 }
