@@ -50,6 +50,6 @@ enum class EntityType : int {
 	HOPPER_MINECART = 524384,
 	TNT_MINECART,
 	CHEST_MINECART,
-	COW_EMERALD
+	EMERALD_COW
 };
 
