@@ -118,7 +118,4 @@ public:
 	static void addCreativeItem(Item*, short);
 	static void addCreativeItem(const ItemInstance&);
 	static void addCreativeItem(short, short);
-	
-	static Item* mStick; // 280
-	static Item* mEmerald; // 388
 };
