@@ -1,4 +1,5 @@
 #pragma once
+
 class Item;
 class CompoundTag;
 class Block;
